Rewrote skills into lists, aligned project articles correctly

--- a/site.css
+++ b/site.css
@@ -65,6 +65,8 @@ h1 {
 }
 
 section {
+    background-color: lightgray;
+    border-radius: 15px;
     margin: 1em 0;
 
     padding-top: 3em;
@@ -75,12 +77,27 @@ section > p {
     margin: 1em 0;
 }
 
+#aboutMe, #mySkills, #myProjects {
+    border: 2px solid black;
+    padding: 1em;
+}
+
+#mySkills {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 #projects {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    text-align: center;
+}
 
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+#projects article {
+    padding: 1em;
+    border-radius: 25px;
 }
 
 img {
@@ -92,7 +109,6 @@ footer {
     margin-top: 2em;
     margin-bottom: 1em;
     background: #666;
-    color: #fff;
     padding: 1em 0;
     text-align: center;
 }
